fixed cart overlap

--- a/UserView/userStyle.css
+++ b/UserView/userStyle.css
@@ -183,8 +183,8 @@ nav{
     background-color: #e0e0ff;
     border-radius: 20px;
     position: fixed;
-    top: 10vh;
-    right: 10vh;
+    top: 17vh;
+    right: 5vh;
     color: black;
     flex-direction: column;
     justify-content: center;
